welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:4: error: '=' expected but ';' found.
  var indice = 1
^